--- a/documents/changelog.txt
+++ b/documents/changelog.txt
@@ -1,8 +1,15 @@
-v0.0.2 not yet released WIP
-===========================
+v0.0.2 21/10/2023
+=================
 -using cstdint header in variable types
 -run_main_entry: Rewrite in asm for stack setup
 -printf libc implementation for work with sysv_abi
+-initial pad emulation (only digital pad atm)
+-Implemented sceVideoOutIsFlipPending 
+-Added auto stubs , now unsupported hle function will resolve as empty stubs
+-Rewrote libc_cxa functions
+-Libc implementations ( _ZdlPv,_Znwm,rand,_Fsin,qsort,free,strncpy,memmove,atan2f,pow,_Sin)
+-ET_SCE_DYNAMIC behaves as valid for execution now.
+-Initial FileSystem work (not yet usable).
 
 v0.0.1 29/09/2023
 =================
